# routes/feedback.js
@@ -5,7 +5,7 @@ const { requiresAuth } = require('express-openid-connect');
 routes.get('/', /*requiresAuth(),*/ controller.getFeedback);
 routes.post('/', /*requiresAuth(),*/ controller.addFeedback);
 
-//routes.get('/:id', /*requiresAuth(),*/ controller.getFeedbackById);
+routes.get('/:id', /*requiresAuth(),*/ controller.getFeedbackById);
 //routes.put('/:id', /*requiresAuth(),*/ controller.updateFeedback);
 //routes.delete('/:id', /*requiresAuth(),*/ controller.deleteFeedback);
 
