# swagger-output.json
@@ -985,6 +985,36 @@
           }
         ]
       }
+    },
+    "/feedback/{id}": {
+      "get": {
+        "tags": ["Feedback"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "OAuth2": ["read", "write"]
+          }
+        ]
+      }
     }
   }
 }
